fix problem in edit button

--- a/src/main.scss
+++ b/src/main.scss
@@ -159,6 +159,20 @@ button {
     &::-webkit-scrollbar-thumb:hover {
       background: #0a4b4d;
     }
+
+    .task-list__all {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0.5rem 0;
+      list-style: none;
+      border: 1px solid lightgray;
+      border-radius: 0.5rem;
+  
+      li {
+        width: max-content;
+      }
+    }
   
     .cont-newproject {
       grid-area: addproj;
@@ -229,35 +243,31 @@ button {
       .cont-fbuton {
         grid-area: buton;
         justify-self: center;
-      }
-  
-      
+      } 
     }
+  }
+  .task {
+    height: max-content;
+    text-align: center;
+    padding: 0 0.5rem;
+    margin-bottom: 0.5rem;
+  
     
-  
-    .task {
-      height: max-content;
-      text-align: center;
-      padding: 0 0.5rem;
-      margin-bottom: 0.5rem;
-  
-      .task-list {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0.5rem 0;
-        list-style: none;
-        border: 1px solid lightgray;
-        border-radius: 0.5rem;
-  
-        li {
-          width: max-content;
-        }
-      }
-  
-      .task-done {
-        text-decoration: line-through;
-      }
+    .task-done {
+      text-decoration: line-through;
+    }
+  }
+  .task-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 0;
+    list-style: none;
+    border: 1px solid lightgray;
+    border-radius: 0.5rem;
+
+    li {
+      width: max-content;
     }
   }
 }
