add styles display tasks

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,7 @@ ul {
 
 body {
   background-color: #f7f7f7;
+  margin: 0;
 }
 
 button {
@@ -60,77 +61,200 @@ button {
     justify-content: space-evenly;
     align-items: center;
     position: absolute;
-    width: 50%;
-    height: 50%;
-    top: 15%;
+    width: 100%;
+    height: 100%;
+    top: 0;
     left: 0;
     right: 0;
-    margin: auto;
-    background-color: #fff;
-    border: 1px solid lightgray;
-    border-radius: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.603);
 
+    .only-one__task {
+      background-color: white;
+      width: 50%;
+      height: 40%;
+      border: 1px solid lightgrey;
+      border-radius: 0.5rem;
+      text-align: center;
+      display: grid;
+      grid-template-columns: repeat(3, 2fr);
+      grid-template-rows: repeat(8, 40px);
+      grid-template-areas:
+      '. . .'
+      '. . .' 
+      'title title title'
+      'desc desc desc'
+      'date date date'
+      'prio prio prio'
+      'done done done'
+      'btn1 btn2 btn3';
+
+      p {
+        width: max-content;
+      }
+
+      .title-task__only {
+        grid-area: title;
+        justify-self: center;
+        align-self: center;
+      }
+      .desc-task__only {
+        @extend .title-task__only;
+
+        grid-area: desc;
+      }
+      
+      .date-task__only {
+        @extend .title-task__only;
+
+        grid-area: date;
+      }
+
+      .prio-task__only {
+        @extend .title-task__only;
+
+        grid-area: prio;
+      }
+
+      .done-task__only {
+        @extend .title-task__only;
+
+        grid-area: done;
+      }
+
+      #edit_task {
+        @extend .title-task__only;
+
+        grid-area: btn1;
+      }
+
+      #delete_task {
+        @extend .title-task__only;
+
+        grid-area: btn2;
+      }
+
+      #close_task {
+        @extend .title-task__only;
+
+        grid-area: btn3;
+      }
+    }
+
+    form {
+      background-color: white;
+      width: 50%;
+      height: 60%;
+      border: 1px solid lightgrey;
+      border-radius: 0.5rem;
+      text-align: center;
+      display: grid;
+      grid-template-columns: repeat(1, 2fr);
+      grid-template-rows: repeat(11, 40px);
+      row-gap: 5px;
+      margin: 2rem;
+    }
   }
 
   .list-all__container {
     padding: 0 0.5rem;
+
+    .task-list__default {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 30px;
+      grid-template-areas: 
+      'proj title desc date prio done';
+      background-color: #820d7c;
+      border-top-left-radius: 0.5rem;
+      border-top-right-radius: 0.5rem;
+      margin-top: 1rem;
+            
+      .title-def {
+        grid-area: title;
+        color: #ffffff;
+        font-weight: 700;
+        justify-self: center;
+        align-self: center;  
+      }
+      .proj-def {
+        @extend .title-def;
+        grid-area: proj;
+      }
+  
+      .desc-def {
+        @extend .title-def;
+        grid-area: desc;
+      }
+  
+      .date-def {
+        @extend .desc-def;
+        grid-area: date;
+      }
+  
+      .prio-def {
+        @extend .desc-def;
+        grid-area: prio;
+      }
+  
+      .done-def {
+        @extend .desc-def;
+        grid-area: done;
+      }  
+    }
+
+    .task-list__all {
+      padding: 0.5rem 0;
+      list-style: none;
+      border: 1px solid lightgray;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 30px;
+      grid-template-areas: 
+      'proja titlea desca datea prioa donea';
+  
+      li {
+        width: max-content;
+      }
+
+      .proj-all {
+        grid-area: proja;
+        font-weight: 700;
+        justify-self: center;
+        align-self: center; 
+      }
+
+      .title-all {
+        @extend .proj-all;
+        grid-area: titlea;
+      }
+
+      .desc-all {
+        @extend .proj-all;
+        grid-area: desca;
+        width: 150px;
+        overflow-y: scroll;
+      }
+
+      .date-all {
+        @extend .proj-all;
+        grid-area: datea;
+      }
+
+      .prio-all {
+        @extend .proj-all;
+        grid-area: prioa;
+      }
+
+      .done-all {
+        @extend .proj-all;
+        grid-area: donea;
+      }
+
+
+    }
+  
   }
 
-  .task-list__default {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 30px;
-    grid-template-areas: 
-    'title desc date prio done';
-    background-color: #820d7c;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
-    margin-top: 1rem;
-    
-    .title-def {
-      grid-area: title;
-      color: #ffffff;
-      font-weight: 700;
-      justify-self: center;
-      align-self: center;  
-    }
-
-    .desc-def {
-      @extend .title-def;
-      grid-area: desc;
-    }
-
-    .date-def {
-      @extend .desc-def;
-      grid-area: date;
-    }
-
-    .prio-def {
-      @extend .desc-def;
-      grid-area: prio;
-    }
-
-    .done-def {
-      @extend .desc-def;
-      grid-area: done;
-    }
-
-    
-  }
-
-  .task-list__all {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 0.5rem 0;
-    list-style: none;
-    border: 1px solid lightgray;
-
-    li {
-      width: max-content;
-    }
-  }
 
   .title-webp {
     grid-area: title;
@@ -139,16 +263,25 @@ button {
     margin-bottom: 5rem;
   }
 
+  h2 {
+    margin: 0;
+  }
+
   .cont-titlesp {
     grid-area: titlesp;
     align-self: center;
     justify-self: center;
-
+    background-color: #ffffff;
+    border-top-left-radius: 0.5rem;
+    width: 100%;
+    height: 100%;
+    text-align: center;
   }
 
   .cont-titlest {
+
     grid-area: titlet;
-    align-self: center;
+    align-self: flex-start;
     justify-self: center;
     background-color: #820d7c;
     color: #ffffff;
@@ -156,13 +289,12 @@ button {
     height: 100%;
     text-align: center;
     border-top-right-radius: 0.5rem ;
-  } p {
-    margin: 0;
-  }
+  } 
 
   .pill-important {
     color: #f7f7f7;
     background-color:  #C70039;
+    width: max-content;
     padding-right: 0.6em;
     padding-left: 0.6em;
     border-radius: 10rem;
@@ -315,23 +447,93 @@ button {
     text-align: center;
     padding: 0 0.5rem;
     margin-bottom: 0.5rem;
-  
-    
-    .task-done {
-      text-decoration: line-through;
-    }
-  }
-  .task-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 0;
-    list-style: none;
-    border: 1px solid lightgray;
-    border-radius: 0.5rem;
 
-    li {
-      width: max-content;
+    .task-list__defproj {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 30px;
+      grid-template-areas: 
+      'title desc date prio done';
+      background-color: #820d7c;
+      border-top-left-radius: 0.5rem;
+      border-top-right-radius: 0.5rem;
+      margin-top: 1rem;
+            
+      .title-def {
+        grid-area: title;
+        color: #ffffff;
+        font-weight: 700;
+        justify-self: center;
+        align-self: center;  
+      }
+    
+      .desc-def {
+        @extend .title-def;
+        grid-area: desc;
+      }
+    
+      .date-def {
+        @extend .desc-def;
+        grid-area: date;
+      }
+    
+      .prio-def {
+        @extend .desc-def;
+        grid-area: prio;
+      }
+    
+      .done-def {
+        @extend .desc-def;
+        grid-area: done;
+      }
+    }
+
+    .task-list {
+      padding: 0.5rem 0;
+      list-style: none;
+      border: 1px solid lightgray;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 100px;
+      grid-template-areas: 
+      'titlea desca datea prioa donea';
+    
+      li {
+        width: max-content;
+      }
+    
+      .title-task__proj {
+        grid-area: titlea;
+        justify-self: center;
+        align-self: center;
+        height: 100%;
+      }
+    
+      .desc-task__proj {
+        @extend .title-task__proj;
+        grid-area: desca;
+        width: 170px;
+        word-wrap: break-word;
+        overflow-y: scroll;
+      }
+    
+      .date-task__proj {
+        @extend .title-task__proj;
+        grid-area: datea;
+      }
+    
+      .prio-task__proj {
+        grid-area: prioa;
+        justify-self: center;
+        align-self: flex-start;
+      }
+    
+      .done-task__proj {
+        @extend .title-task__proj;
+        grid-area: donea;
+      }
     }
   }
 }
+
+
