--- a/src/main.scss
+++ b/src/main.scss
@@ -150,8 +150,8 @@ button {
       display: grid;
       grid-template-columns: repeat(1, 2fr);
       grid-template-rows: repeat(11, 40px);
-      row-gap: 5px;
-      margin: 2rem;
+      row-gap: 10px;
+      padding: 2rem;
     }
   }
 
